--- a/AtomTasks/AtomTasks/Views/Shared/_Layout.cshtml
+++ b/AtomTasks/AtomTasks/Views/Shared/_Layout.cshtml
@@ -9,7 +9,8 @@
 <body>
     <nav>
         <ul class="menu">
-            <li>@Html.ActionLink( "Главная", "Index", "Home" )</li>
+            <li>@Html.ActionLink("Главная", "Index", "Home")</li>
+            <li>@Html.ActionLink("Список пользователей", "UserList", "Home")</li>
         </ul>
     </nav>
     @RenderBody()
