--- a/AtomTasks/AtomTasks/Content/Site.css
+++ b/AtomTasks/AtomTasks/Content/Site.css
@@ -22,3 +22,72 @@ select,
 textarea {
     max-width: 280px;
 }
+#header-image-menu {
+    top: 10px;
+    position: relative;
+}
+
+#header-image-menu img {
+    width: 100%;
+    align-content: center;
+}
+
+#image-text {
+    position: absolute;
+    top: 60%;
+    left: 60%;
+    font-family: 'Roboto';
+    color: #000;
+    transform: translate(-30%, -30%);
+    text-align: center;
+}
+#top-header {
+    width: 100%;
+    background: #D8E3AB;
+    height: 70px;
+    vertical-align: middle;
+}
+#logo {
+    float: left;
+    width: 50px;
+}
+#addTask {
+    float: left;
+    margin-top: 30px;
+    margin-left: 40px;
+}
+#login {
+    float: right;
+    margin-top: 30px;
+    margin-right: 30px;
+}
+img {
+    height: 70px;
+    margin-left: 30px;
+}
+#modal {
+    background: #ccc;
+    padding: 10px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 200px;
+    height: 150px;
+    margin: auto;
+    display: none;
+}
+#newTask {
+    background: #ccc;
+    padding: 10px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 200px;
+    height: 230px;
+    margin: auto;
+    display: none;
+}
