--- a/AtomTasks/AtomTasks/Views/Shared/_Layout.cshtml
+++ b/AtomTasks/AtomTasks/Views/Shared/_Layout.cshtml
@@ -4,14 +4,60 @@
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+    <script src="../../Scripts/Login.js" type="text/javascript"></script>
 </head>
 
 <body>
-    <nav>
-        <ul class="menu">
-            <li>@Html.ActionLink( "Главная", "Index", "Home" )</li>
-        </ul>
-    </nav>
+    <div id="header">
+
+        <!-- Top header menu containing
+             logo and Navigation bar -->
+        <div id="top-header">
+
+            <!-- Logo -->
+            <div id="logo">
+                <img src="images/zarech.gif" />
+            </div>
+
+            <!-- Navigation Menu -->
+            <div id="addTask">
+                <input type="button" value="Добавить задание" onclick=disp(document.getElementById('newTask'))>
+            </div>
+            <div id="header-image-menu">
+                <h2 id="image-text">
+                    Заречный ATOM TASK
+                </h2>
+            </div>
+            <div id="login">
+                <input type="button" value="Войти" onclick="disp(document.getElementById('modal'))">
+            </div>
+        </div>
+
+        <!-- Image menu in Header to contain an Image and
+             a sample text over that image -->
+
+    </div>
     @RenderBody()
+
+    <form id="modal">
+        <p><input type="text" placeholder="Логин"></p>
+        <p><input type="text" placeholder="Пароль"></p>
+        <p><input type="button" value="Войти"></p>
+        <p><a href="#">Зарегистрироваться</a></p>
+    </form>
+
+    <form id="newTask">
+        <p>Новая задача</p>
+        <p><input type="text" placeholder="Название"></p>
+        <p><input type="text" placeholder="Описание"></p>
+        <p><input type="text" placeholder="Начальная цена "></p>
+        <p>
+        <select id="ExecType" name="Type">
+            <option value="Yur">Юридическое лицо</option>
+            <option value="Fiz">Физическое лицо</option>
+            <option value="WE">Не имеет значения</option>
+        </select></p>
+        <p><input type="button" value="Войти"></p>
+    </form>
 </body>
 </html>
