--- a/AtomTasks/AtomTasks/Views/Shared/_Layout.cshtml
+++ b/AtomTasks/AtomTasks/Views/Shared/_Layout.cshtml
@@ -10,7 +10,9 @@
     <nav>
         <ul class="menu">
             <li>@Html.ActionLink("Главная", "Index", "Home")</li>
-            <li>@Html.ActionLink("Список пользователей", "UserList", "Home")</li>
+            <li>@Html.ActionLink("Тест списков", "TestLists", "Home")</li>
+
+
         </ul>
     </nav>
     @RenderBody()
