--- a/AtomTasks/AtomTasks/Content/Site.css
+++ b/AtomTasks/AtomTasks/Content/Site.css
@@ -66,6 +66,7 @@ img {
     margin-left: 30px;
 }
 #modal {
+    display: none;
     background: #ccc;
     padding: 10px;
     position: absolute;
@@ -76,9 +77,9 @@ img {
     width: 200px;
     height: 150px;
     margin: auto;
-    display: none;
 }
 #newTask {
+    display: none;
     background: #ccc;
     padding: 10px;
     position: absolute;
@@ -87,7 +88,34 @@ img {
     left: 0;
     right: 0;
     width: 200px;
-    height: 230px;
+    height: 290px;
+    margin: auto;
+}
+
+#postRequest {
+    background: #ccc;
+    padding: 10px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 200px;
+    height: 290px;
+    margin: auto;
+    display: none;
+}
+
+#setExecutor {
+    background: #ccc;
+    padding: 10px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 200px;
+    height: 290px;
     margin: auto;
     display: none;
 }
