--- a/AtomTasks/AtomTasks/Views/Shared/_Layout.cshtml
+++ b/AtomTasks/AtomTasks/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
 
             <!-- Navigation Menu -->
             <div id="addTask">
-                <input type="button" value="Добавить задание" onclick=disp(document.getElementById('newTask'))>
+                <input type="button" value="Добавить задание" onclick=disp(document.getElementById('postRequest'))>
             </div>
             <div id="header-image-menu">
                 <h2 id="image-text">
@@ -32,7 +32,7 @@
                 </h2>
             </div>
             <div id="login">
-                <input type="button" value="Войти" onclick="disp(document.getElementById('modal'))">
+                <input type="button" value="Войти" onclick=disp(document.getElementById('modal'))>
             </div>
         </div>
 
