--- a/AtomTasks/AtomTasks/Views/Shared/_Layout.cshtml
+++ b/AtomTasks/AtomTasks/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
 
             <!-- Navigation Menu -->
             <div id="addTask">
-                <input type="button" value="Добавить задание" onclick=disp(document.getElementById('postRequest'))>
+                <input type="button" value="Добавить задание" onclick=disp(document.getElementById('newTask'))>
             </div>
             <div id="header-image-menu">
                 <h2 id="image-text">
