--- a/AtomTasks/AtomTasks/Views/Home/Index.cshtml
+++ b/AtomTasks/AtomTasks/Views/Home/Index.cshtml
@@ -65,7 +65,7 @@
     <script type="text/javascript">
         function NewTask() {
             // получаем значения для добавляемого задания
-            alert($('#ExecType').children("option:selected").val());
+            
             var task = {
                 newTaskCustomer: $('CurrentUser')
                 , Name: $('#newTaskName').val()
@@ -81,6 +81,7 @@
                 type: 'POST',
                 data: JSON.stringify(task),
                 contentType: "application/json;charset=utf-8",
+                success: function () { $('#newTask').close() },
                 error: function (x, y, z) {
                     alert(x + '\n' + y + '\n' + z);
                 }
