--- a/AtomTasks/AtomTasks/Views/Shared/_Layout.cshtml
+++ b/AtomTasks/AtomTasks/Views/Shared/_Layout.cshtml
@@ -8,9 +8,6 @@
 </head>
 
 <body>
-    <div>
-        <p>@Html.ActionLink( "Тест", "Test", "Home" )</p>
-    </div>
     <div id="header">
 
         <!-- Top header menu containing
@@ -32,7 +29,7 @@
                 </h2>
             </div>
             <div id="login">
-                <input type="button" value="Войти" onclick=disp(document.getElementById('modal'))>
+                <a href="#">Константин</a>
             </div>
         </div>
 
